# aocf

./: .gitignore  .gitjournal.toml  CHANGELOG.md  COPYING  Cargo.toml  README.md  bump.sh  cookie.md  default.nix  stable.nix
.github/workflows/: build.yml  check.yml  clippy-annotate.yml  coverage.yml  osx-build.yml  release.yml  test.yml  windows-build.yml
aocf_cli/: Cargo.toml  README.md  aocf_cli.nix  build.rs  docker.nix
aocf_cli/src/: cli.rs  conf.rs  day.rs  lib.rs  pretty.rs
examples/: cookie  day01.rs  day02.rs
src/: cli.rs  cookie.rs  http.rs  lib.rs
src/cookie/: db_models.rs  db_schema.rs
