[package]
name = "aocf"
version = "0.1.1"
authors = ["Ed Cragg <ed@eipi.xyz>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "A crate and CLI helper tool for Advent of Code"
repository = "https://github.com/nuxeh/aocf"
keywords = ["advent", "code", "cli", "tool", "helper"]

[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
failure = "0.1.6"
html2md = "0.2.9"
regex = "1.3.3"
reqwest = { version = "0.10.1", features = ["blocking"] }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
