[package]
name = "aocf"
version = "0.1.13"
authors = ["Ed Cragg <ed@eipi.xyz>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "A crate and CLI helper tool for Advent of Code"
repository = "https://github.com/nuxeh/aocf"
keywords = ["advent", "code", "cli", "tool", "helper"]

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"], optional = true }
failure = "0.1.8"
html2md = "0.2.10"
regex = "1.4.2"
reqwest = { version = "0.10.9", features = ["blocking"] }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
tempfile = "3.1.0"
libsqlite3-sys = { version = ">=0.8.0, <0.23.0", features = ["min_sqlite_version_3_7_16", "bundled"], optional = true }
structopt = "0.3.21"
atty = "0.2.14"

[features]
sqlite = ["diesel", "libsqlite3-sys"]
default = []
