[package]
name = "aocf_cli"
version = "0.1.8"
authors = ["Ed Cragg <ed@eipi.xyz>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "CLI helper tool for Advent of Code, with a workflow similar to Git"
repository = "https://github.com/nuxeh/aocf"
keywords = ["advent", "code", "cli", "tool", "helper"]

[[bin]]
name = "aocf"

[dev-dependencies]
tempfile = "3.1.0"

[dependencies]
aocf = { version = "0.1.8", path = ".." }
chrono = "0.4.19"
docopt = "1.1.0"
dirs = "3.0.1"
failure = "0.1.8"
serde = "1.0.117"
serde_derive = "1.0.117"
tempfile = "3.1.0"
toml = "0.5.7"
glob = "0.3.0"
termimad = "0.9.1"
crossterm = "0.17.7"
regex = "1.4.2"

[package.metadata.deb]
extended-description = """\
Advent of Code fetch CLI tool modelled after Git.
"""
